Sync with office 2